# doris-mcp-server

./: .env.example  .gitignore  Dockerfile  README.md  README_EN.md  pyproject.toml  recovery.py  requirements.txt  restart_server.sh  start_server.sh
client/: .env.example  index.html  package-lock.json  package.json  vite.config.js
client/src/: App.vue  main.js
data/: qa_examples.json
docs/: MCP-CLIENT-CONNECTION-GUIDE.md  USAGE.md
docs/api/: reference.md  resources.md
docs/feature/: nl2sql.md
docs/guide/: getting-started.md  mcp-protocol.md  nl2sql.md
docs/usage/: api.md  examples.md
doris_mcp_server/: main.py  multiworker_app.py
doris_mcp_server/utils/: analysis_tools.py  db.py  query_executor.py  schema_extractor.py
examples/: create_sample_db.py  nl2sql_example.py
src/: __init__.py  cli.py  main.py  mcp_adapter.py  nl2sql_service.py  nl2sql_stream_processor.py  sse_server.py  streamable_server.py
src/prompts/: __init__.py  metadata_schema.py  prompts.py
src/resources/: __init__.py  docs_resources.py  schema_resources.py  system_resources.py
src/tools/: __init__.py  docs_tools.py  example_tool.py  mcp_doris_tools.py  metadata_tools.py  query_tools.py  similarity_tools.py  sql_executor_tools.py  sql_generator_tools.py  sql_validator_tools.py  tool_initializer.py  tool_registry.py
src/utils/: context.py  db.py  db_init.py  docs_search.py  llm_client.py  (+7 more)
tests/: mcp_client.py  simple_client.py  test_business_query.py  test_client.py  test_log_fix.py  test_multi_llm_config.py  test_nl2sql_fix.py  test_ollama_fix.py  test_sql_generation.py
(+35 files in other folders)
